--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/utama.png" alt="">
+								<img src="img/kedua.png" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
