--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/portofolio2.jpg" alt="">
+								<img src="img/fotoutama.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
@@ -330,7 +330,7 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/porto1.png" alt="">
+        						<img class="img-fluid" src="img/1porto.jpg" alt="">
         						<a class="light" href="img/porto1.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
