--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/porto7.png" alt="">
+        						<img class="img-fluid" src="img/3porto.jpg" alt="">
         						<a class="light" href="img/porto7.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
