--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/fotoutama.jpg" alt="">
+								<img src="img/fotoelroi.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
@@ -330,8 +330,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/1porto.jpg" alt="">
-        						<a class="light" href="img/porto1.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/1portofolio.jpg" alt="">
+        						<a class="light" href="img/1portofolio.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Website Clinic</h4>
@@ -348,6 +348,7 @@
         					<div class="g_item_text">
         						<h4>Kopma Design Competition </h4>
         						<p>Client Project</p>
+                    <br>
         					</div>
         				</div>
         			</div>
@@ -355,7 +356,7 @@
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/3porto.jpg" alt="">
-        						<a class="light" href="img/porto7.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<a class="light" href="img/3porto.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Prototype Bekasi Tourism Web</h4>
@@ -366,8 +367,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand creative print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/portofolio6.png" alt="">
-        						<a class="light" href="img/portofolio6.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/6portofolio.jpg" alt="">
+        						<a class="light" href="img/6portofolio.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Website Puslitbang TekMIRA</h4>
@@ -378,8 +379,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/porto4.png" alt="">
-        						<a class="light" href="img/porto4.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/4portofolio.jpg" alt="">
+        						<a class="light" href="img/4portofolio.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Content Srategy Poster</h4>
@@ -390,8 +391,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/portofolio3.png" alt="">
-        						<a class="light" href="img/portofolio3.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/10porto.jpg" alt="">
+        						<a class="light" href="img/10porto.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Human and Computer Interaction</h4>
