--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>I am a graduate of telkom university majoring in informatics engineering, I have a high willingness to work in the field of informatics and I have a high desire in learning a thing and therefore I am ready to work in various fields.</p>
+        					<p>I am a graduated student from Telkom University in Informatics engineering faculty, I have a high desire to work in informatics/IT field, and I like to learn things. Therefore I am ready to work in various fields.</p>
         					<div class="row">
         						<!-- <div class="col-md-4">
         							<div class="wel_item">
@@ -272,7 +272,7 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>offerings From me</h2>
-        			<p>I can offer several programs based on the results of my experiences and study results in college</p>
+        			<p>I can offer several programs based on the results of my experience and the results of study in college</p>
         		</div>
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
@@ -289,7 +289,7 @@
         				<div class="feature_item">
         					<i class="flaticon-skyline"></i>
         					<h4>UI/UX Designer</h4>
-        					<p>UI / UX is an ability in defining IT projects, this stage is the initial stage, I have a banana focus on UX so that it can realize the right and useful IT projects</p>
+        					<p>UI/UX is an ability in defining IT projects, this stage is the initial stage, I have a focus on UX so that it can realize the right and useful IT projects.</p>
                   <br>
                     <br>
                       <br>
@@ -300,7 +300,7 @@
         				<div class="feature_item">
         					<i class="flaticon-sketch"></i>
         					<h4>IT Project Management</h4>
-        					<p>I have several times gotten projects in the field of IT project management where as a project management must manage the entire series of project work so that the project can be completed properly and appropriately. if you are looking for I am a person who has interested in this field</p>
+        					<p>I had been doing several projects in IT Field. As a project manager, I should manage the entire process of the project so that the project would be completed properly and appropriately. If you are looking for a project manager, I can be the person.</p>
         				</div>
         			</div>
         		</div>
@@ -313,7 +313,7 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>My Latest Projects</h2>
-        			<p>You can see some of the projects that I made during college</p>
+        			<p>You can see some of the projects I made while in college</p>
         		</div>
         		<div class="isotope_fillter">
         			<ul class="gallery_filter list">
@@ -413,13 +413,13 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>more details about me</h2>
-        			<p>here will be explained about my personality and hobbies</p>
+        			<p>Here will be explained about personality, hobbies, and much more about me</p>
         		</div>
         		<div class="testi_inner">
 					<div class="testi_slider owl-carousel">
 						<div class="item">
 							<div class="testi_item">
-								<p>I like playing badminton and swimming, I do it because it can relieve stress. I did that since I was in elementary school</p>
+								<p>I like playing badminton and swimming, I do it because it can relieve stress. I've been doint it since the elementary school</p>
                 <br>
 								<h4>Sport</h4>
 								<!-- <a href="#"><i class="fa fa-star"></i></a>
@@ -442,7 +442,7 @@
 						</div>
 						<div class="item">
 							<div class="testi_item">
-								<p>When I have free time I like to travel with friends or just play games at home</p>
+								<p>Travelling with friends or just stay playing games at home is  good idea</p>
                 <br>
                 <br>
 								<h4>Hobbies</h4>
